Actualizando todos los archivos

--- a/Informe_final_seminario.tex
+++ b/Informe_final_seminario.tex
@@ -51,10 +51,10 @@ Para abordar este problema, se han propuesto métodos para evaluar ensayos escrit
 Sin embargo, esta metodología de evaluación automática de textos tiene varias críticas \cite{t9}\cite{t24}\cite{t25}. Los principales puntos débiles son:
 
 \begin{itemize}
-	\item No se evalúa completamente la coherencia textual, pues no considera el orden de las palabras. Por ejemplo, la oración ``El árbol está seco.'' sería equivalente a ``seco el está árbol.'' Un evaluador humano consideraría incoherente la segunda oración.
-	\item No se considera la cohesión de un texto. Por ejemplo el texto: ``Los beneficios de la siesta son bien conocidos, aunque parece que quedan algunas cosas por aclarar. Manfred Walzl, neurólogo austriaco, pone en marcha un estudio; con un estudio él pretende demostrar que la siesta aumenta la productividad laboral'', claramente tiene problemas de cohesión, los cuales pasan desapercibidos si sólo se considera frecuencia de términos.
-	\item No se considera el contenido sintáctico del texto. Por ejemplo, un sistema como el descrito previamente consideraría ``Resfriado me habría la lluvia mojado con me si hubiera'' equivalente a ``Si me hubiera mojado con la lluvia me habría resfriado''.
-	\item Al estar basadas en medidas superficiales, cualquier sistema que utilice esta metodología será susceptible al engaño. Por ejemplo la siguiente definición: ``Un campo magnético es una descripción matemática de la influencia magnética de las corrientes eléctricas y de los materiales magnéticos'', podría ser reemplazada por ``campo magnético valores corrientes electricidad matemática''. La diferencia es que la primera considera la explicación de un concepto, la segunda es sólo un conjunto de palabras.
+	\item No se evalúa completamente la coherencia textual, pues no considera el orden de las palabras. Por ejemplo, la oración {\em ``El árbol está seco.''} sería equivalente a {\em ``seco el está árbol.''} Un evaluador humano consideraría incoherente la segunda oración.
+	\item No se considera la cohesión de un texto. Por ejemplo el texto: {\em ``Los beneficios de la siesta son bien conocidos, aunque parece que quedan algunas cosas por aclarar. Manfred Walzl, neurólogo austriaco, pone en marcha un estudio; con un estudio él pretende demostrar que la siesta aumenta la productividad laboral''}, claramente tiene problemas de cohesión, los cuales pasan desapercibidos si sólo se considera frecuencia de términos.
+	\item No se considera el contenido sintáctico del texto. Por ejemplo, un sistema como el descrito previamente consideraría {\em ``Resfriado me habría la lluvia mojado con me si hubiera''} equivalente a {\em ``Si me hubiera mojado con la lluvia me habría resfriado''}.
+	\item Al estar basadas en medidas superficiales, cualquier sistema que utilice esta metodología será susceptible al engaño. Por ejemplo la siguiente definición: {\em ``Un campo magnético es una descripción matemática de la influencia magnética de las corrientes eléctricas y de los materiales magnéticos''}, podría ser reemplazada por {\em ``campo magnético valores corrientes electricidad matemática''}. La diferencia es que la primera considera la explicación de un concepto, la segunda es sólo un conjunto de palabras.
 	
 \end{itemize}
 
