--- a/Informe_final_seminario.tex
+++ b/Informe_final_seminario.tex
@@ -27,21 +27,21 @@
 
 
 \section{Introducción}
-La escritura es una habilidad que se adquiere a temprana edad, pues se nos enseñan las letras, las palabras, las oraciones, etc. Sin embargo, estas habilidades no se desarrollan por completo, pues lo que se enseña no es suficiente para expresar claramente lo que se piensa, y como consecuencia nace la necesidad de saber redactar y/o de exponer de manera coherente y precisa las ideas.
+La escritura es una habilidad que se adquiere a temprana edad, pues se nos enseñan las letras, las palabras, las oraciones, etc. Sin embargo, esta habilidad no se desarrolla por completo, pues lo que se enseña no es suficiente para expresar claramente lo que se piensa, y como consecuencia nace la necesidad de saber redactar y/o de exponer de manera coherente y precisa las ideas \cite{t21}. 
 
-En la actualidad, un tema debatido es la capacidad de redacción y comprensión que debiesen tener las personas que egresan del sistema escolar \cite{t21}\cite{t22}. La discusión generada aborda temas tales como la carencia en el manejo del lenguaje escrito que evidencian alumnos en todos los niveles educacionales y estratos socioculturales \cite{t23}.
+En la actualidad, es un tema ampliamente debatido es la capacidad de redacción y comprensión que debiesen tener las personas que egresan del sistema escolar \cite{t22}. Esto aborda temas tales como la carencia en el manejo del lenguaje escrito que evidencian los estudiantes en todos los niveles educacionales y estratos socioculturales \cite{t23}.
 
-Este problema tiene consecuencias relevantes como por ejemplo reprobar un examen porque las ideas expresadas no están claras o escritas en forma coherente. Por otro lado, una persona podría perder una oportunidad laboral debido a una mala redacción de la solicitud; en síntesis, ideas que podrían ser bastante buenas e innovadoras podrían llegar a verse opacadas o, peor aún, rechazadas por el receptor al ser comunicadas de manera defectuosa.
+Una mala capacidad de redacción tiene consecuencias relevantes como por ejemplo reprobar un examen porque las ideas expresadas no están claras. Por otro lado, una persona podría perder una oportunidad laboral debido a una mala redacción; en síntesis, ideas que podrían ser bastante buenas e innovadoras podrían llegar a verse opacadas o, peor aún, rechazadas por el receptor al ser comunicadas de manera defectuosa.
 
-Un texto se produce en función de un lector, con el objetivo de lograr comprensión sobre un tema que se busca comunicar. Debido a esto, al establecer las relaciones entre oraciones e ideas planteadas, se deben aplicar principios que aseguren un significado claro del tema que se desarrolla y un dominio preciso de los recursos lingüísticos relacionados con {\em coherencia} y {\em cohesión} \cite{t32}.
+Un texto se produce en función de un lector, con el objetivo de lograr comprensión sobre un tema que se busca comunicar. Por otra parte, debe haber relaciones entre las ideas planteadas dentro del texto, para lograr asegurar un significado claro del mismo. Existen dos propiedades que los buenos textos deben tener, las cuales son {\em coherencia} y {\em cohesión} \cite{t32}.
 
-La {\em coherencia textual} es una propiedad del texto que define las conexiones semánticas entre unidades de información. Esta conexión se da tanto localmente a nivel de oraciones adyacentes, como globalmente (texto completo). Por otro lado, la {\em cohesión} constituye un conjunto de recursos léxicos y gramaticales que enlazan una parte del texto con otra, y por esto, es uno de los factores fundamentales para determinar si un fragmento de discurso pueda ser considerado un texto y no una sucesión de oraciones inconexas.
+La {\em coherencia textual} es una propiedad del texto que define las conexiones semánticas entre unidades de información y está relacionada con la representación mental que el lector tenga del mismo. Esta conexión se da tanto localmente a nivel de oraciones adyacentes, como globalmente (texto completo). Por otro lado, la {\em cohesión} constituye un conjunto de recursos léxicos y gramaticales que enlazan una parte del texto con otra, y por esto, es uno de los factores fundamentales para determinar si un texto puede ser considerado como tal, y no una sucesión de oraciones inconexas.
 
-Luego, una forma de propender al aumento de las capacidades para formular adecuadamente las ideas en un texto es ``practicar'', realizando producciones textuales para que sean evaluadas y corregidas por un especialista humano y, a través de sucesivas repeticiones de este proceso perfeccionar la calidad del trabajo. El primer punto a considerar en este enfoque es la distinción entre corrección y evaluación \cite{t18}.
+Una forma de propender al aumento de las capacidades para formular adecuadamente las ideas en un texto es ``practicar'', realizando producciones textuales para que sean evaluadas y corregidas por un especialista humano y, a través de sucesivas repeticiones perfeccionar la calidad del texto producido. Se debe tener en cuenta la diferencia entre corrección y evaluación \cite{t18}.
 
 \begin{itemize}
-	\item {\bf Corrección}: Ayuda a un estudiante a mejorar sus habilidades de escritura mediante la revisión de sus trabajos. El objetivo es corregir errores y avanzar en el manejo de estructuras y recursos necesarios para elaborar textos de mejor calidad y que expresen mejor las ideas.
-	\item {\bf Evaluación:} Busca determinar el nivel de competencias que tiene un estudiante para realizar un escrito, según un marco de evaluación definido.
+	\item {\bf Corrección}: Ayuda a que un estudiante mejore sus habilidades de escritura mediante la revisión de sus textos. El objetivo es corregir errores y avanzar en el manejo de estructuras y recursos lingüísticos necesarios para elaborar textos de mejor calidad y que expresen mejor las ideas.
+	\item {\bf Evaluación:} Busca determinar el nivel de competencias que tiene un estudiante para realizar un texto, según un marco de evaluación definido.
 \end{itemize}
 
 Debe tenerse en cuenta que la evaluación de textos es una tarea costosa en términos de tiempo y personal requerido. Además, no existe otro modo que evalúe mejor el aprendizaje de un estudiante que no sea mediante la expresión de sus ideas a través de un escrito, por lo que hay una necesidad de repetir el ejercicio constantemente en el tiempo. Por otro lado, el número de estudiantes ha ido creciendo con el paso del tiempo, por lo que los costos de esta labor se vuelven abrumadores \cite{t10}.
