--- a/Informe_final_seminario.tex
+++ b/Informe_final_seminario.tex
@@ -44,15 +44,15 @@ Una forma de propender al aumento de las capacidades para formular adecuadamente
 	\item {\bf Evaluación:} Busca determinar el nivel de competencias que tiene un estudiante para realizar un texto, según un marco de evaluación definido.
 \end{itemize}
 
-Debe tenerse en cuenta que la evaluación de textos es una tarea costosa en términos de tiempo y personal requerido. Además, no existe otro modo que evalúe mejor el aprendizaje de un estudiante que no sea mediante la expresión de sus ideas a través de un escrito, por lo que hay una necesidad de repetir el ejercicio constantemente en el tiempo. Por otro lado, el número de estudiantes ha ido creciendo con el paso del tiempo, por lo que los costos de esta labor se vuelven abrumadores \cite{t10}.
+Debe tenerse en cuenta que la evaluación de textos es una tarea costosa en términos de tiempo y personal requerido. Además, no existe otro modo que evalúe mejor el aprendizaje de un estudiante que no sea mediante la expresión de sus ideas a través de un escrito, por lo que se debe repetir el ejercicio constantemente en el tiempo. Sumado a lo anterior, la cantidad de estudiantes ha crecido con el paso del tiempo, por lo que los costos de corregir y revisar textos se vuelven abrumadores \cite{t10}.
 
-Para abordar este problema, se han propuesto métodos para evaluar ensayos escritos de manera automática, labor que en la literatura se conoce como {\em Automatic Essay Scoring}. Los primeros sistemas propuestos para esta labor intentan evaluar características relacionadas a la calidad del texto tales como: dicción, uso de vocabulario, coherencia, entre otras. Para ello, se hace uso de ocurrencia de términos, como: conteo de signos de puntuación, largo de las palabras, entre otros. 
+Para disminuir los costos del personal requerido para revisar un texto, se han propuesto métodos para evaluar textos de manera automática, tarea conocida como {\em Automatic Essay Scoring}. Los primeros sistemas propuestos para esta tarea intentan evaluar características relacionadas a la calidad del texto tales como la dicción, uso de vocabulario, coherencia, entre otras. Para ello, se utiliza la ocurrencia de términos (conteo de signos de puntuación, largo de las palabras, entre otros). 
 
-Sin embargo, esta metodología de evaluación automática de textos tiene varias críticas \cite{t9}\cite{t24}\cite{t25}. Los principales puntos débiles son:
+Sin embargo, este método de evaluación automática de textos tiene algunas debilidades \cite{t9}\cite{t24}\cite{t25}:
 
 \begin{itemize}
-	\item No se evalúa completamente la coherencia textual, pues no considera el orden de las palabras. Por ejemplo, la oración {\em ``El árbol está seco.''} sería equivalente a {\em ``seco el está árbol.''} Un evaluador humano consideraría incoherente la segunda oración.
-	\item No se considera la cohesión de un texto. Por ejemplo el texto: {\em ``Los beneficios de la siesta son bien conocidos, aunque parece que quedan algunas cosas por aclarar. Manfred Walzl, neurólogo austriaco, pone en marcha un estudio; con un estudio él pretende demostrar que la siesta aumenta la productividad laboral''}, claramente tiene problemas de cohesión, los cuales pasan desapercibidos si sólo se considera frecuencia de términos.
+	\item No se evalúa la extructura sintáctica del texto, pues no considera el orden de las palabras. Por ejemplo, la oración {\em ``El árbol está seco.''} sería equivalente a {\em ``seco el está árbol.''} Un evaluador humano consideraría diferentes las oraciones.
+	\item No se considera la cohesión de un texto, lo que trae como consecuencia que no se evalúa la calidad del texto en términos del correcto uso de recursos lingüísticos para expresar las ideas. Por ejemplo el texto: {\em ``Los beneficios de la siesta son bien conocidos, aunque parece que quedan algunas cosas por aclarar. Manfred Walzl, neurólogo austriaco, pone en marcha un estudio; con un estudio él pretende demostrar que la siesta aumenta la productividad laboral''}, claramente tiene problemas de cohesión, los cuales pasan desapercibidos si sólo se considera frecuencia de términos.
 	\item No se considera el contenido sintáctico del texto. Por ejemplo, un sistema como el descrito previamente consideraría {\em ``Resfriado me habría la lluvia mojado con me si hubiera''} equivalente a {\em ``Si me hubiera mojado con la lluvia me habría resfriado''}.
 	\item Al estar basadas en medidas superficiales, cualquier sistema que utilice esta metodología será susceptible al engaño. Por ejemplo la siguiente definición: {\em ``Un campo magnético es una descripción matemática de la influencia magnética de las corrientes eléctricas y de los materiales magnéticos''}, podría ser reemplazada por {\em ``campo magnético valores corrientes electricidad matemática''}. La diferencia es que la primera considera la explicación de un concepto, la segunda es sólo un conjunto de palabras.
 	
